--- a/index.html
+++ b/index.html
@@ -1,70 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <title>
+      Frontend Mentor | Huddle landing page with alternating feature blocks
+    </title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- #region header -->
+    <header>
+      <div class="container">
+        <div class="header-top">
+          <img src="./images/logo.svg" alt="huddle-logo" />
+          <a href="#">Try It Free</a>
+        </div>
 
-  Try It Free
+        <div class="header-content">
+          <section class="build">
+            <h1>Build The Community Your Fans Will Love</h1>
 
-  Build The Community Your Fans Will Love
+            <p>
+              Huddle re-imagines the way we build communities. You have a voice,
+              but so does your audience. Create connections with your users as
+              you engage in genuine discussion.
+            </p>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+            <a href="#">Get Started For Free</a>
+          </section>
+          <div class="bg-img"></div>
+        </div>
+      </div>
+    </header>
+    <!-- #endregion -->
+    <!-- #region main -->
+    <main>
+      <!-- #region grow -->
+      <div class="container">
+        <section>
+          <h2>Grow Together</h2>
 
-  Get Started For Free
+          <p>
+            Generate meaningful discussions with your audience and build a
+            strong, loyal community. Think of the insightful conversations you
+            miss out on with a feedback form.
+          </p>
+        </section>
+        <div class="grow"></div>
+      </div>
+      <!-- #endregion -->
+      <!-- #region flow -->
+      <div class="container">
+        <div class="flow"></div>
+        <section>
+          <h2>Flowing Conversations</h2>
 
-  Grow Together
+          <p>
+            You wouldn't paginate a conversation in real life, so why do it
+            online? Our threads have just-in-time loading for a more natural
+            flow.
+          </p>
+        </section>
+      </div>
+      <!-- #endregion -->
+      <!-- #region users-->
+      <div class="container">
+        <section>
+          <h2>Your Users</h2>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+          <p>
+            It takes no time at all to integrate Huddle with your app's
+            authentication solution. This means, once signed in to your app,
+            your users can start chatting immediately.
+          </p>
+        </section>
+        <div class="users"></div>
+      </div>
+      <!-- #endregion -->
+    </main>
+    <!-- #endregion -->
+    <!-- #region footer -->
+    <footer>
+      <div class="footer-top">
+        <h3>Ready To Build Your Community?</h3>
 
-  Flowing Conversations
+        <a href="#"> Get Started For Free</a>
+      </div>
 
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
+      <div class="footer-content container">
+        <address>
+          <img src="./images/footer-logo.png" alt="huddle-logo" />
 
-  Your Users
+          <a href="https">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua
+          </a>
 
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
+          <a href="tel:+1-543-123-4567">+1-543-123-4567</a>
+          <a href="mailto:example@huddle.com">example@huddle.com</a>
+        </address>
 
-  Ready To Build Your Community?
+        <nav>
+          <ul class="nav-items">
+            <li class="column">
+              <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">What We Do</a></li>
+                <li><a href="#">FAQ</a></li>
+              </ul>
+            </li>
+            <li class="column">
+              <ul>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
 
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+        <div>
+          <ul>
+            <li><a href="#" class="fb"></a></li>
+            <li><a href="#" class="twitter"></a></li>
+            <li><a href="#" class="inst"></a></li>
+          </ul>
+          <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+        </div>
+      </div>
+    </footer>
+    <!-- #endregion -->
+  </body>
 </html>
